# home-router

./: AUTHENTICATION.md  Cargo.toml  INSTALL.md  QUICKSTART.md  README.md  config.example.yaml  dhcp-server.service  ndhcpd.rc
.github/workflows/: ci.yml  release.yml
crates/dhcp-cli/: Cargo.toml
crates/dhcp-cli/src/: client.rs  main.rs
crates/dhcp-cli/src/commands/: lease.rs  range.rs  static_ip.rs  subnet.rs
crates/dhcp-proto/: Cargo.toml
crates/dhcp-proto/src/: lib.rs  mac.rs  message_type.rs  option.rs  packet.rs
crates/dhcp-server/: Cargo.toml
crates/dhcp-server-old/: Cargo.toml
crates/dhcp-server-old/src/: main.rs
crates/dhcp-server/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  models.rs
crates/dhcp-server/src/db/: memory.rs  mod.rs  sqlite.rs  tests.rs
crates/dhcp-server/src/dhcp/: mod.rs  server.rs  test_helpers.rs
crates/dhcp-server/src/handlers/: ia_prefixes.rs  leases.rs  mod.rs  ranges.rs  static_ips.rs  subnets.rs  tokens.rs
crates/ndhcp-cli/src/: client.rs  main.rs
crates/ndhcp-cli/src/commands/: ip6subnet.rs  mod.rs  static_ip.rs  subnet.rs
crates/ndhcpd/: Cargo.toml
crates/ndhcpd/migrations/: 20240104000000_static_ips_ip_pk.sql  20240105000000_static_ips_drop_enabled.sql  20240107000000_drop_enabled_columns.sql
crates/ndhcpd/src/: config.rs  lib.rs  main.rs  models.rs
crates/ndhcpd/src/auth/: mod.rs  token.rs
crates/ndhcpd/src/db/: memory.rs  mod.rs  sqlite.rs  tests.rs
crates/ndhcpd/src/dhcp/: server.rs  test_helpers.rs
crates/ndhcpd/src/handlers/: mod.rs  static_ips.rs  subnets.rs  tokens.rs
crates/ndhcpd/src/ra/: mod.rs  packet.rs  server.rs
crates/ndhcpd/src/utils/: logging.rs  mod.rs  network.rs
