[package]
name = "dhcp-server-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dhcp-server"
path = "src/main.rs"

[dependencies]
dhcp-server = { path = "../dhcp-server" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
axum = { workspace = true }
