[package]
name = "ndhcpd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ndhcpd"
path = "src/main.rs"

[dependencies]
dhcp-proto = { path = "../dhcp-proto" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[features]
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies.hyper]
version = "1.5"

[dependencies.hyper-util]
version = "0.1"
features = ["server", "server-auto", "tokio"]

[dependencies.clap]
workspace = true

[dependencies.argon2]
version = "0.5.3"

[dependencies.base64]
version = "0.22.1"

[dependencies.getrandom]
version = "0.4.1"

[dependencies.rand]
version = "0.8"

[dependencies.async-trait]
workspace = true

[dependencies.futures]
version = "0.3"

[dependencies.libc]
version = "0.2"

[dependencies.syslog]
version = "7"
